--- a/Coronavirus_Tweets_Sentiment_Analysis_Classification_ML_Project_.ipynb
+++ b/Coronavirus_Tweets_Sentiment_Analysis_Classification_ML_Project_.ipynb
@@ -30,7 +30,7 @@
         "##### **Contribution**    - Individual/Team\n",
         "##### **Team Member 1 -**RISHI GUPTA\n",
         "##### **Team Member 2 -**SUMANA MONDAL\n",
-        "##### **Team Member 3 -**JITENDRA SONKAR\n",
+        "##### **Team Member 3 -**JITENDRA SONKAR (SELF)\n",
         "##### **Team Member 4 -** ANKIT MISHRA\n",
         "##### **Team Member 5-** MAYANK SINHA"
       ]
